multiple parameters in url

--- a/setup.ini
+++ b/setup.ini
@@ -1,5 +1,5 @@
 URL = 'http://email.build/'
-db_host = 'localhost';
-db_name = 'dcoredco_tutor';
-db_user = 'root';
-db_pass = '';
+databaseHost = 'localhost';
+databaseName = 'dcoredco_tutor';
+databaseUser = 'root'
+databasePassword = '';
