--- a/setup.ini
+++ b/setup.ini
@@ -1,5 +1,5 @@
 URL = 'http://email.build/'
-databaseHost = 'localhost';
-databaseName = 'stuco';
+databaseHost = 'localhost'
+databaseName = 'stuco'
 databaseUser = 'root'
-databasePassword = '';
+databasePassword = ''
